# UrbanFlow-AI

./: .env.example  .gitignore  README.md  README_RU.md  commands.txt  project-structure.txt  project.md  pytest.ini  tsconfig.json
ai/notebooks/: 01_explore_sumo_tls.ipynb  02_reward_design.ipynb  03_train_tls_agent.ipynb  04_evaluate_tls_agent.ipynb  create_analysis_notebooks.py
ai/urbanflow_ai/: __init__.py  config.py
docs/: urbanflow-ai-spec.md
scripts/: run-dev.sh  run-server.sh  run-web.sh  test-server.sh  test-web.sh
server/: README.md  pyproject.toml  routes.rou.xml
server/app/: main.py
server/app/api/: editor.py  health.py  osm.py  simulation.py  training.py
server/app/core/: config.py
server/app/osm/: client.py  mock_osm.py  normalizer.py  parser.py
server/app/schemas/: editor.py  osm.py  simulation.py  training.py
server/app/simulation/: ai_tls_controller.py  city.py  city_graph.py  controllers.py  engine.py  events.py  metrics.py  session_store.py  sumo_engine.py  sumo_scenario.py  training_jobs.py
server/app/utils/: geo.py
server/data/sumo/session_acc40b86723646dfa3e0df976944295d/: all_routes.rou.xml  debug.txt  map.osm.xml  merged.trips.xml  pedestrians.trips.xml  public_transport.add.xml  public_transport_lines.xml  routes.rou.alt.xml  routes.rou.xml  simulation.sumocfg
server/tests/: test_health.py
tests/server/: test_city_graph.py  test_editor_api.py  test_geo.py  test_osm_normalizer.py  test_simulation_api.py  (+1 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
(+53 files in other folders)
