[project]
name = "urbanflow-server"
version = "0.1.0"
description = "Backend server for UrbanFlow AI."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pandas>=3.0.3",
  "matplotlib>=3.11.0",
]

[tool.ruff]
line-length = 100
